add opt-in automatic inbox runner
